--- a/components/category/category.module.css
+++ b/components/category/category.module.css
@@ -57,7 +57,7 @@
   height: 100%;
   display: flex;
   /* flex-direction: ; */
-  justify-content: space-around;
+  /* justify-content: center; */
   align-items: center;
   background-color: transparent;
   overflow-x: auto;
@@ -95,19 +95,10 @@
 
 /* width */
 .card::-webkit-scrollbar {
-  height: 6px;
-}
-
-/* Track */
-.card::-webkit-scrollbar-track {
-  /* box-shadow: inset 0 0 3px #ffb326;  */
-  /* border-color: #ffb326; */
-  /* border: 1px solid #ffb326; */
-  border-radius: 55px;
+  height: 0px;
 }
 
 /* Handle */
 .card::-webkit-scrollbar-thumb {
-  background: transparent;
-  border-radius: 55px;
+  background-color: transparent;
 }
