--- a/components/category/categorylist.module.css
+++ b/components/category/categorylist.module.css
@@ -8,6 +8,8 @@
     flex-direction: column;
     justify-content: space-between;
     cursor: pointer;
+    flex-wrap: nowrap;
+
 }
 .imageContainer{
     height: 80%;
