--- a/components/home/homeList/homeList.module.css
+++ b/components/home/homeList/homeList.module.css
@@ -30,7 +30,7 @@
   font-size: 1rem;
 }
 .description {
-  height: 30%;
+  max-height: 30%;
   font-size: 0.8rem;
   font-family: "Space Mono", monospace;
 }
