--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -7,12 +7,19 @@
 }
 .header{
     width:100% ;
-    height: 12%;
+    height: 14%;
     z-index: 2;
 
+}
+
+@media only screen and (max-width:600px){
+    .header{
+        height: 18%;
+    }
 }
 
 .main {
     width: 100%;
     height: 82%;    
   }
+
