--- a/components/home/homeList/homeList.module.css
+++ b/components/home/homeList/homeList.module.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 10px;
 }
 .listContainer img {
@@ -31,6 +31,7 @@
 }
 .description {
   max-height: 30%;
+  text-align: center;
   font-size: 0.8rem;
   font-family: "Space Mono", monospace;
 }
