--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,10 @@ a {
 * {
   box-sizing: border-box;
 }
+.gallery{
+  padding-top: 10px;
+  padding-bottom: 50px;
+}
 .orderHistory,
 .gallery{
   width: 100%;
