--- a/components/home/customerReviews/customerReviews.module.css
+++ b/components/home/customerReviews/customerReviews.module.css
@@ -16,12 +16,12 @@
 }
 .comment {
   width: 80%;
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: white;
   display: flex;
   justify-content: center;
-  margin-left: 15px;
   font-family: "Inconsolata", monospace;
+  text-align: center;
 }
 
 @media only screen and (min-width: 500px) {
